# DR-ENb0

./: .gitignore  DR_Severity_Prediction_Aptos_2019.ipynb  M3_A1_group5.ipynb  README.md  main.py  pyproject.toml
capstone-project/: .gitignore  main.py  readme.md
capstone-project/Notebooks/: class_distribution_after_SMOTE.ipynb  data_exploration.ipynb
capstone-project/artifacts/: test_report.json
capstone-project/artifacts/smote/: test_report.json
capstone-project/configs/: efficientnet_b0.json  efficientnet_b0_regression.json  efficientnet_b0_smote.json
capstone-project/docs/: experiment_results.md  pipeline_scope.md  preprocessing_methodology.tex  research_paper.tex
capstone-project/scripts/: cut_off.py  download_preprocessed_npz.py  validate_preprocessed.py
capstone-project/src/: data.py  evaluate.py  gradcam.py  model.py  plots.py  pre_proc_pipeline.py  preprocessing.py  tracking.py  train.py
capstone-project/src/dr_grading/: __init__.py  artifacts.py  cli.py  download.py  evaluate.py  gradcam.py  model.py  paths.py  plots.py  pre_proc_pipeline.py  predict.py  preprocess.py  train.py
capstone-project/tests/: test_gradcam_contract.py  test_model_contract.py  test_preprocessing_contract.py  test_project_structure.py  test_training_structure.py
docs/superpowers/plans/: 2026-06-13-dr-pipeline-fix.md
src/: cut_off.py  preprocessing.py
